--- a/composer.json
+++ b/composer.json
@@ -78,5 +78,8 @@
             "allow-contrib": false,
             "require": "7.1.*"
         }
+    },
+    "require-dev": {
+        "phpunit/phpunit": "^11.2"
     }
 }
