--- a/jenkinsfile
+++ b/jenkinsfile
@@ -18,17 +18,17 @@ pipeline {
         stage('Build') {
             steps {
                 // Étape pour installer les dépendances Symfony et API Platform
-                sh "composer install --no-interaction --prefer-dist"
+                sh 'composer install --no-interaction --prefer-dist'
 
                 // Exécuter les migrations de base de données si nécessaire
-                sh "${PATH_TO_SYMFONY} doctrine:migrations:migrate --no-interaction"
+                sh "${env.PATH_TO_SYMFONY} doctrine:migrations:migrate --no-interaction"
             }
         }
 
         stage('Run Tests') {
             steps {
                 // Exécuter les tests unitaires Symfony
-                sh "${PATH_TO_SYMFONY} phpunit"
+                sh "${env.PATH_TO_SYMFONY} phpunit"
             }
         }
 
@@ -36,7 +36,7 @@ pipeline {
             steps {
                 // Exemple de déploiement vers un serveur distant (adapter selon votre configuration)
                 // Utilisation d'un conteneur Docker pour l'environnement de déploiement
-                sh "docker run --rm -v \$(pwd):/app -w /app ${DOCKER_IMAGE} ${PATH_TO_SYMFONY} deploy"
+                sh "docker run --rm -v \$(pwd):/app -w /app ${env.DOCKER_IMAGE} ${env.PATH_TO_SYMFONY} deploy"
             }
         }
     }
@@ -49,8 +49,8 @@ pipeline {
             // Notification par email en cas d'échec du pipeline
             emailext (
                 subject: "Pipeline ${currentBuild.result}: Job '${env.JOB_NAME} [${env.BUILD_NUMBER}]'",
-                body: "Pipeline ${currentBuild.result}: Job '${env.JOB_NAME} [${env.BUILD_NUMBER}]'\n\n${BUILD_URL}",
-                to: "tchantchoisaac1997@gmail.com",
+                body: "Pipeline ${currentBuild.result}: Job '${env.JOB_NAME} [${env.BUILD_NUMBER}]'\n\n${env.BUILD_URL}",
+                to: "tchantchoisaac1997@gmail.com"
             )
         }
     }
