--- a/compose.yaml
+++ b/compose.yaml
@@ -10,6 +10,7 @@ services:
     environment:
       - APP_ENV=dev
       - SYMFONY_ENV=dev
+      - DATABASE_URL=mysql://symfony_user:symfony_password@mysql-db:3306/symfony_db
     networks:
       - app-network
     depends_on:
