--- a/compose.yaml
+++ b/compose.yaml
@@ -10,11 +10,11 @@ services:
     environment:
       - APP_ENV=dev
       - SYMFONY_ENV=dev
-      - DATABASE_URL=mysql://symfony_user:symfony_password@mysql-db:3306/symfony_db
+      - DATABASE_URL=mysql://symfony_user:symfony_password@database:3306/symfony_db
     networks:
       - app-network
     depends_on:
-      - mysql
+      - database
 
   nginx:
     image: nginx:latest
@@ -28,17 +28,15 @@ services:
     depends_on:
       - php
 
-  mysql:
-    image: mysql:5.7
-    container_name: mysql-db
-    restart: always
+  database:
+    image: mysql:latest
     environment:
-      MYSQL_ROOT_PASSWORD: root_password_here
+      MYSQL_ROOT_PASSWORD: password
       MYSQL_DATABASE: symfony_db
       MYSQL_USER: symfony_user
       MYSQL_PASSWORD: symfony_password
     ports:
-      - "3306:3306"
+      - '3306:3306'
     networks:
       - app-network
 
