--- a/config/packages/security.yaml
+++ b/config/packages/security.yaml
@@ -32,9 +32,21 @@ security:
     access_control:
         #- { path: ^/api/login, roles: PUBLIC_ACCESSS}
         #- { path: ^/api/login, roles: IS_AUTHENTICATED_ANONYMOUSLY }
-        - { path: ^/api/users, roles: IS_AUTHENTICATED_ANONYMOUSLY }
-        # - { path: ^/api, roles: IS_AUTHENTICATED_FULLY }
+        # - { path: ^/api/users, roles: IS_AUTHENTICATED_ANONYMOUSLY }
+        # - { path: ^/api, roles: IS_AUTHENTICATED_FULLY } 
+        # Routes pour lesquelles aucun authentification n'est nécessaire
+        - { path: ^/api/login, roles: IS_AUTHENTICATED_ANONYMOUSLY }
+        - { path: ^/api/register, roles: IS_AUTHENTICATED_ANONYMOUSLY } 
+       # - { path: ^/admin, roles: ROLE_ADMIN }
+        - { path: ^/caissier, roles: ROLE_CAISSIER }
+        - { path: ^/api/tickets, roles: ROLE_ADMIN }
+        - { path: ^/api, roles: ROLE_USER }
+        - { path: ^/api, roles: ROLE_USER }
+        - { path: ^/api/user/lot, roles: ROLE_USER }
+        #Routes pour les CAISSIER  
+        - { path: ^/api/ticket/validation, roles: ROLE_CAISSIER}
        
+
 
 when@test:
     security:
