--- a/config/services.yaml
+++ b/config/services.yaml
@@ -15,6 +15,8 @@ services:
             $entityManager: '@doctrine.orm.entity_manager'
         tags:
             - { name: 'console.command' }
+    App\Controller\PasswordResetController:
+        tags: ['controller.service_arguments']
 
     # makes classes in src/ available to be used as services
     # this creates a service per class whose id is the fully-qualified class name
