--- a/config/packages/security.yaml
+++ b/config/packages/security.yaml
@@ -40,8 +40,8 @@ security:
        # - { path: ^/admin, roles: ROLE_ADMIN }
         - { path: ^/caissier, roles: ROLE_CAISSIER }
         - { path: ^/api/tickets, roles: ROLE_ADMIN }
-        - { path: ^/api, roles: ROLE_USER }
-        - { path: ^/api, roles: ROLE_USER }
+      #  - { path: ^/api, roles: ROLE_USER }
+        # - { path: ^/api, roles: ROLE_USER }
         - { path: ^/api/user/lot, roles: ROLE_USER }
         #Routes pour les CAISSIER  
         - { path: ^/api/ticket/validation, roles: ROLE_CAISSIER}
