--- a/composer.json
+++ b/composer.json
@@ -8,6 +8,7 @@
         "ext-ctype": "*",
         "ext-iconv": "*",
         "api-platform/core": "^3.3",
+        "deployer/deployer": "^7.4",
         "doctrine/dbal": "^3",
         "doctrine/doctrine-bundle": "^2.12",
         "doctrine/doctrine-migrations-bundle": "^3.3",
@@ -84,6 +85,7 @@
     },
     "require-dev": {
         "phpunit/phpunit": "^11.3",
-        "symfony/maker-bundle": "^1.60"
+        "symfony/maker-bundle": "^1.36" 
+        
     }
 }
