KAN-17:test cicd

--- a/Kubernetes/nginx-deployment.yaml
+++ b/Kubernetes/nginx-deployment.yaml
@@ -24,6 +24,13 @@ spec:
           mountPath: /var/www/symfony/var
         - name: symfony-app-vendor
           mountPath: /var/www/symfony/vendor
+        resources: # Ajout des limites de ressources
+          requests:
+            memory: "256Mi"
+            cpu: "250m"
+          limits:
+            memory: "512Mi"
+            cpu: "500m"
       volumes:
       - name: symfony-app
         emptyDir: {}
@@ -43,5 +50,5 @@ spec:
   - protocol: TCP
     port: 80
     targetPort: 80
-    nodePort: 30080  # Choisis un port entre 30000 et 32767
+    nodePort: 30080  # Port spécifique entre 30000 et 32767
   type: NodePort
