--- a/.docker/php/Dockerfile
+++ b/.docker/php/Dockerfile
@@ -1,8 +1,10 @@
 FROM php:8.2-fpm-buster
 ARG TIMEZONE
 
+# Copier le fichier php.ini pour la configuration
 COPY php.ini /usr/local/etc/php/conf.d/docker-php-config.ini
 
+# Installer les dépendances nécessaires
 RUN apt-get update && apt-get install -y \
     gnupg \
     g++ \
@@ -21,17 +23,18 @@ RUN apt-get update && apt-get install -y \
     acl \
     && echo 'alias sf="php bin/console"' >> ~/.bashrc
 
-RUN docker-php-ext-configure gd --with-jpeg --with-freetype 
-
-RUN docker-php-ext-install \
+# Configurer et installer les extensions PHP
+RUN docker-php-ext-configure gd --with-jpeg --with-freetype \
+    && docker-php-ext-install \
     pdo pdo_mysql zip xsl gd intl opcache exif mbstring
 
-# Set timezone
+# Configurer le fuseau horaire
 RUN ln -snf /usr/share/zoneinfo/${TIMEZONE} /etc/localtime && echo ${TIMEZONE} > /etc/timezone \
     && printf '[PHP]\ndate.timezone = "%s"\n', ${TIMEZONE} > /usr/local/etc/php/conf.d/tzone.ini \
-    && "date"
+    && date
 
-RUN curl -sS https://getcomposer.org/installer | php -- --install-dir=/usr/local/bin --filename=composer
+# Installer Composer
 RUN curl -sS https://getcomposer.org/installer | php -- --install-dir=/usr/local/bin --filename=composer
 
+# Définir le répertoire de travail
 WORKDIR /var/www/symfony
