--- a/.env
+++ b/.env
@@ -30,11 +30,11 @@ APP_SECRET=c6ab9f3b33a6958bbdaecb6129ea7d16
 #DATABASE_URL="mysql://root:@127.0.0.1:3306/ThéTipTopDatabase"
 #DATABASE_URL="mysql://root:@127.0.0.1:3306/ThétipDatabase?serverVersion=8.0.32&charset=utf8mb4"
 #DATABASE_URL=mysql://user_dev:Groupe6@db_dev:3306/Thetiptop_dev
- #DATABASE_URL="mysql://root:root@192.168.80.3:3306/dbname"
- #DATABASE_URL="mysql://user:password@mysql:3306/appdb"
- #DATABASE_URL="mysql://user:user@database:3306/app"
- #DATABASE_URL=mysql://user:root@db:3306/app_db
- #DATABASE_URL=mysql://app_user:helloworld@db:3306/app_db
+#DATABASE_URL="mysql://root:root@192.168.80.3:3306/dbname"
+#DATABASE_URL="mysql://user:password@mysql:3306/appdb"
+#DATABASE_URL="mysql://user:user@database:3306/app"
+#DATABASE_URL=mysql://user:root@db:3306/app_db
+DATABASE_URL=mysql://app_user:helloworld@127.0.0.1:3306/app_db
 
 
 
