--- a/.docker/docker-compose.yml
+++ b/.docker/docker-compose.yml
@@ -1,6 +1,6 @@
 version: "3.0"
 services:
-    db:
+    mysql:
         image: mysql:8.0.33
         platform: linux/x86_64
         command: --default-authentication-plugin=mysql_native_password
