--- a/.env
+++ b/.env
@@ -34,7 +34,7 @@ APP_SECRET=c6ab9f3b33a6958bbdaecb6129ea7d16
 #DATABASE_URL="mysql://user:password@mysql:3306/appdb"
 #DATABASE_URL="mysql://user:user@database:3306/app"
 #DATABASE_URL=mysql://user:root@db:3306/app_db
-DATABASE_URL=mysql://app_user:helloworld@mysql:3306/app_db
+DATABASE_URL="mysql://app_user:helloworld@mysql:3306/app_db"
 
 
 
