KAN-17:test cicd

--- a/.docker/php/Dockerfile
+++ b/.docker/php/Dockerfile
@@ -3,7 +3,6 @@ ARG TIMEZONE
 
 # Copier le fichier php.ini pour la configuration
 COPY php.ini /usr/local/etc/php/conf.d/docker-php-config.ini
-
 # Installer les dépendances nécessaires
 RUN apt-get update && apt-get install -y \
     gnupg \
@@ -20,7 +19,11 @@ RUN apt-get update && apt-get install -y \
     libicu-dev \
     libonig-dev \
     libxslt1-dev \
-    acl
+    acl \
+    software-properties-common \
+    p7zip-full \
+    && add-apt-repository ppa:git-core/ppa \
+    && apt-get update && apt-get install -y git
 
 # Configurer et installer les extensions PHP
 RUN docker-php-ext-configure gd --with-jpeg --with-freetype \
