--- a/config/packages/security.yaml
+++ b/config/packages/security.yaml
@@ -39,7 +39,7 @@ security:
         #- { path: ^/api/register, roles: IS_AUTHENTICATED_ANONYMOUSLY } 
         - { path: ^/admin, roles: ROLE_ADMIN }
         - { path: ^/caissier, roles: ROLE_CAISSIER }
-        - { path: ^/api/tickets, roles: ROLE_USER }
+       # - { path: ^/api/tickets, roles: ROLE_USER }
       #  - { path: ^/api, roles: ROLE_USER }
         # - { path: ^/api, roles: ROLE_USER }
         - { path: ^/api/user/lot, roles: ROLE_USER }
