--- a/.docker/php/Dockerfile
+++ b/.docker/php/Dockerfile
@@ -2,7 +2,7 @@ FROM php:8.2-fpm-buster
 ARG TIMEZONE
 
 # Copier le fichier php.ini pour la configuration
-COPY php.ini /usr/local/etc/php/conf.d/docker-php-config.ini
+COPY .docker/php/php.ini /usr/local/etc/php/conf.d/docker-php-config.ini
 
 # Installer les dépendances nécessaires
 RUN apt-get update && apt-get install -y \
@@ -34,7 +34,7 @@ RUN docker-php-ext-configure gd --with-jpeg --with-freetype \
     pdo pdo_mysql zip xsl gd intl opcache exif mbstring
 
 # Configurer le fuseau horaire
-RUN ln -snf /usr/share/zoneinfo/${TIMEZONE} /etc/localtime && echo ${TIMEZONE} > /etc/timezone \
+RUN ln -snf  /usr/share/zoneinfo/${TIMEZONE} /etc/localtime && echo ${TIMEZONE} > /etc/timezone \
     && printf '[PHP]\ndate.timezone = "%s"\n', ${TIMEZONE} > /usr/local/etc/php/conf.d/tzone.ini \
     && date
 
@@ -44,4 +44,7 @@ RUN curl -sS https://getcomposer.org/installer | php -- --install-dir=/usr/local
 
 
 # Définir le répertoire de travail
-WORKDIR /var/www/symfony
+WORKDIR /var/www/symfony 
+COPY . .
+#COPY ../../.. . 
+RUN composer install
